--- a/.github/workflows/fab-plugin-build.yml
+++ b/.github/workflows/fab-plugin-build.yml
@@ -6,7 +6,7 @@ on:
       engine_roots:
         description: "Comma-separated UE roots (each has Engine/Build/BatchFiles/RunUAT.bat)"
         required: true
-        default: '"C:\\Program Files\\Epic Games\\UE_5.4","C:\\Program Files\\Epic Games\\UE_5.5","C:\\Program Files\\Epic Games\\UE_5.6"'
+        default: '"C:\Program Files\Epic Games\UE_5.4","C:\Program Files\Epic Games\UE_5.5","C:\Program Files\Epic Games\UE_5.6"'
       engine_versions:
         description: "Comma-separated versions matching roots (e.g., 5.4.0,5.5.0,5.6.0)"
         required: true
