--- a/.github/workflows/fab-plugin-build.yml
+++ b/.github/workflows/fab-plugin-build.yml
@@ -46,7 +46,7 @@ jobs:
         run: |
           $pluginDir = "${{ github.event.inputs.plugin_dir }}"
           if (-not $pluginDir) { $pluginDir = "Plugins/VMCLiveLink" }
-          $engineRoots = "${{ github.event.inputs.engine_roots }}"
+          $engineRoots = ${{ github.event.inputs.engine_roots }}
           if (-not $engineRoots) { $engineRoots = "C:\UE\5.4,C:\UE\5.5,C:\UE\5.6" }
           $engineVers = "${{ github.event.inputs.engine_versions }}"
           if (-not $engineVers) { $engineVers = "5.4.0,5.5.0,5.6.0" }
@@ -73,7 +73,7 @@ jobs:
           $PluginDir  = "${{ steps.cfg.outputs.plugin_dir }}"
           $OutputDir  = "$(Resolve-Path .)\FabBuilds"
           New-Item -ItemType Directory -Path $OutputDir -Force | Out-Null
-          $EngineRoots = "${{ steps.cfg.outputs.engine_roots }}".Split(",")
+          $EngineRoots = ${{ steps.cfg.outputs.engine_roots }}.Split(",")
           $EngineVers  = "${{ steps.cfg.outputs.engine_versions }}".Split(",")
           ./scripts/build_fab.ps1 -PluginDir $PluginDir -OutputDir $OutputDir -EngineRoots $EngineRoots -EngineVersions $EngineVers
 
