--- a/Plugins/VMCLiveLink/VMCLiveLink.uplugin
+++ b/Plugins/VMCLiveLink/VMCLiveLink.uplugin
@@ -10,14 +10,17 @@
 		{
 			"Name": "VMCLiveLink",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"IncludeListPlatforms": [ "Win64" ]
 		},
 		{
 			"Name": "VMCLiveLinkEditor",
 			"Type": "Editor",
-			"LoadingPhase": "PostEngineInit"
+			"LoadingPhase": "PostEngineInit",
+			"IncludeListPlatforms": [ "Win64" ]
 		}
 	],
+	
 	"Plugins": [
 		{
 			"Name": "LiveLink",
@@ -28,6 +31,7 @@
 			"Enabled": true
 		}
 	],
+	
 	"CreatedBy": "Lifelike & Believable Animation Design, Inc.",
 	"CreatedByURL": "https://www.lifelikeandbelievable.com",
 	"DocsURL": "",
