--- a/.github/workflows/fab-plugin-build.yml
+++ b/.github/workflows/fab-plugin-build.yml
@@ -20,6 +20,7 @@ jobs:
       PLUGIN_DIR: "Plugins/VMCLiveLink"
       ENGINE_ROOTS: 'C:\\Program Files\\Epic Games\\UE_5.6'
       ENGINE_VERSIONS: '5.6.0'
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -104,6 +105,7 @@ jobs:
         id: create_release
         uses: actions/create-release@v1
         with:
+          token: ${{ secrets.GITHUB_TOKEN }}
           tag_name: ${{ github.ref_name }}
           release_name: ${{ github.ref_name }}
           body: "Automated release created by CI for ${{ github.ref_name }}."
