--- a/Plugins/VMCLiveLink/VMCLiveLink.uplugin
+++ b/Plugins/VMCLiveLink/VMCLiveLink.uplugin
@@ -16,7 +16,7 @@
 		{
 			"Name": "VMCLiveLinkEditor",
 			"Type": "Editor",
-			"LoadingPhase": "PostEngineInit",
+			"LoadingPhase": "Default",
 			"IncludeListPlatforms": [ "Win64" ]
 		}
 	],
