Update asset versioning and plugin configuration
- Added versioning information to `TestMappingAsset.uasset` using Git LFS.
- Updated `VMCLiveLink.uplugin` to include "Plugins" section for "LiveLink" and "OSC".
- Added metadata fields: "CreatedBy", "CreatedByURL", and "EngineVersion" set to "5.6.0".
- Included additional configuration options: "CanContainContent", "IsBetaVersion", "IsExperimentalVersion", and "Installed".

--- a/Plugins/VMCLiveLink/VMCLiveLink.uplugin
+++ b/Plugins/VMCLiveLink/VMCLiveLink.uplugin
@@ -20,7 +20,7 @@
 			"IncludeListPlatforms": [ "Win64" ]
 		}
 	],
-	
+
 	"Plugins": [
 		{
 			"Name": "LiveLink",
@@ -31,12 +31,13 @@
 			"Enabled": true
 		}
 	],
-	
+
 	"CreatedBy": "Lifelike & Believable Animation Design, Inc.",
 	"CreatedByURL": "https://www.lifelikeandbelievable.com",
 	"DocsURL": "",
 	"MarketplaceURL": "",
 	"SupportURL": "",
+	"EngineVersion": "5.6.0",
 	"CanContainContent": true,
 	"IsBetaVersion": false,
 	"IsExperimentalVersion": false,
