--- a/Plugins/VRMInterchange/VRMInterchange.uplugin
+++ b/Plugins/VRMInterchange/VRMInterchange.uplugin
@@ -28,6 +28,7 @@
   "CreatedByURL": "https://www.lifelikeandbelievable.com",
   "DocsURL": "",
   "MarketplaceURL": "",
+  "EngineVersion": "5.6.0",
   "SupportURL": "",
   "CanContainContent": true,
   "IsBetaVersion": false,
