Add IncludeListPlatforms for VRMInterchange plugin

--- a/Plugins/VRMInterchange/VRMInterchange.uplugin
+++ b/Plugins/VRMInterchange/VRMInterchange.uplugin
@@ -9,7 +9,8 @@
     {
       "Name": "VRMInterchange",
       "Type": "Editor",
-      "LoadingPhase": "Default"
+      "LoadingPhase": "Default",
+			"IncludeListPlatforms": [ "Win64" ]
     }
   ],
   "EnabledByDefault": true,
