Add VRM spring bone import and testing functionality
Introduced new functionality to handle VRM spring bone data during
import and post-import processes. Added automation tests for JSON
parsing and glTF node resolution to ensure correctness.

Key changes:
- Added `bGenerateSpringBoneData` setting for spring bone generation.
- Implemented tests for VRM1/VRM0 JSON parsing and glTF name resolution.
- Enhanced `UVRMSpringBonesPostImportPipeline` with metadata for
  better editor integration.
- Updated `VRMInterchangeEditor` module to load during `PreDefault`
  phase and enabled it by default.
- Improved logging and class enumeration in `StartupModule`.

These changes improve the VRM import workflow, test coverage, and
editor integration.

--- a/Plugins/VRMInterchange/VRMInterchange.uplugin
+++ b/Plugins/VRMInterchange/VRMInterchange.uplugin
@@ -9,12 +9,14 @@
     {
       "Name": "VRMInterchange",
       "Type": "Runtime",
-      "LoadingPhase": "Default"
+      "LoadingPhase": "Default",
+      "EnabledByDefault": true
     },
     {
       "Name": "VRMInterchangeEditor",
       "Type": "Editor",
-      "LoadingPhase": "Default"
+      "LoadingPhase": "PreDefault",
+      "EnabledByDefault": true
     }
   ],
   "EnabledByDefault": true,
