Updated .ini files

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -8,3 +8,9 @@ ProjectID=5977B9D042BDC37AC2994094FFF42654
 [/Script/VMCLiveLink.VMCLiveLinkSettings]
 DefaultReferenceSkeleton=/Game/Characters/Mannequins/Meshes/SKM_Quinn_Simple.SKM_Quinn_Simple
 
+[/Script/LiveLink.LiveLinkSettings]
+DefaultLiveLinkPreset=/Game/VRMInterchangeTest/VMCLiveLinkPreset.VMCLiveLinkPreset
+
+[/Script/VRMInterchangeEditor.VRMInterchangeSettings]
+bGenerateSpringBoneData=True
+
