--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Untitled.Untitled
-EditorStartupMap=/Game/Untitled.Untitled
+GameDefaultMap=/Game/VMCLiveLink_TestMap.VMCLiveLink_TestMap
+EditorStartupMap=/Game/VMCLiveLink_TestMap.VMCLiveLink_TestMap
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
@@ -26,6 +26,7 @@ r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
+r.Substrate=False
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
