Add modular VRM spring bone system with runtime support
Refactored `UVRMSpringBoneData` for runtime access, enabling packaged builds to use spring bone settings. Introduced two new modules: `VRMSpringBonesRuntime` for runtime functionality and `VRMSpringBonesEditor` for editor-specific features.

Implemented `FAnimNode_VRMSpringBone` for simulating VRM spring bones with Verlet integration, stiffness, damping, gravity, and teleport resets. Added basic sphere collision handling and constraints to maintain segment lengths.

Created `UAnimGraphNode_VRMSpringBone` for editor configuration and visualization. Updated the template animation blueprint to include the new node.

Added automation tests for chain resolution and simulation stability. Enhanced debugging with visualization tools and scoped performance counters. Ensured determinism and thread safety for parallel evaluation.

Documented an incremental development plan for Phase 5, outlining goals, testing strategies, and risk mitigation steps to ensure stability and performance.

--- a/Plugins/VRMInterchange/VRMInterchange.uplugin
+++ b/Plugins/VRMInterchange/VRMInterchange.uplugin
@@ -17,8 +17,20 @@
       "Type": "Editor",
       "LoadingPhase": "PreDefault",
       "EnabledByDefault": true,
-			"IncludeListPlatforms": [ "Win64" ]
-
+      "IncludeListPlatforms": [ "Win64" ]
+    },
+    {
+      "Name": "VRMSpringBonesRuntime",
+      "Type": "Runtime",
+      "LoadingPhase": "Default",
+      "EnabledByDefault": true
+    },
+    {
+      "Name": "VRMSpringBonesEditor",
+      "Type": "UncookedOnly",
+      "LoadingPhase": "PostDefault",
+      "EnabledByDefault": true,
+      "IncludeListPlatforms": [ "Win64" ]
     }
   ],
   "EnabledByDefault": true,
