--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -9,8 +9,11 @@ ProjectID=5977B9D042BDC37AC2994094FFF42654
 DefaultReferenceSkeleton=/Game/Characters/Mannequins/Meshes/SKM_Quinn_Simple.SKM_Quinn_Simple
 
 [/Script/LiveLink.LiveLinkSettings]
-DefaultLiveLinkPreset=/Game/VRMInterchangeTest/VMCLiveLinkPreset.VMCLiveLinkPreset
+DefaultLiveLinkPreset=/Game/VRMInterchangeTest/LL_SpringTest.LL_SpringTest
 
 [/Script/VRMInterchangeEditor.VRMInterchangeSettings]
 bGenerateSpringBoneData=True
+bGeneratePostProcessAnimBP=True
+bOverwriteExistingSpringAssets=True
+bAssignPostProcessABP=True
 
