Update project settings and add new plugins
Updated `DefaultGame.ini` to replace `DefaultReferenceSkeleton` and `DefaultLiveLinkPreset` with `None`. Added `IKRig` and `LiveLink` plugins in `VRMInterchange.uplugin` to enhance functionality. No changes were made to spring bone generation settings.

--- a/Plugins/VRMInterchange/VRMInterchange.uplugin
+++ b/Plugins/VRMInterchange/VRMInterchange.uplugin
@@ -42,6 +42,14 @@
     {
       "Name": "InterchangeEditor",
       "Enabled": true
+    },
+    {
+      "Name": "IKRig",
+      "Enabled": true
+    },
+    {
+      "Name": "LiveLink",
+      "Enabled": true
     }
   ],
 
