--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -6,10 +6,10 @@ CommonButtonAcceptKeyHandling=TriggerClick
 ProjectID=5977B9D042BDC37AC2994094FFF42654
 
 [/Script/VMCLiveLink.VMCLiveLinkSettings]
-DefaultReferenceSkeleton=/Game/Characters/Mannequins/Meshes/SKM_Quinn_Simple.SKM_Quinn_Simple
+DefaultReferenceSkeleton=None
 
 [/Script/LiveLink.LiveLinkSettings]
-DefaultLiveLinkPreset=/Game/VRMInterchangeTest/LL_SpringTest.LL_SpringTest
+DefaultLiveLinkPreset=None
 
 [/Script/VRMInterchangeEditor.VRMInterchangeSettings]
 bGenerateSpringBoneData=True
