Alternate implementation of VRM Spring Bones

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/VMCLiveLink_TestMap.VMCLiveLink_TestMap
-EditorStartupMap=/Game/VMCLiveLink_TestMap.VMCLiveLink_TestMap
+GameDefaultMap=/Game/SpringBonesTestMap.SpringBonesTestMap
+EditorStartupMap=/Game/SpringBonesTestMap.SpringBonesTestMap
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
@@ -30,6 +30,7 @@ r.Substrate=False
 r.GPUSkin.Support16BitBoneIndex=True
 r.GPUSkin.UnlimitedBoneInfluences=True
 SkeletalMesh.UseExperimentalChunking=1
+r.DefaultFeature.AutoExposure=False
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
