--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -9,7 +9,7 @@ ProjectID=5977B9D042BDC37AC2994094FFF42654
 DefaultReferenceSkeleton=None
 
 [/Script/LiveLink.LiveLinkSettings]
-DefaultLiveLinkPreset=None
+DefaultLiveLinkPreset=/Game/LL_WendyPreset.LL_WendyPreset
 
 [/Script/VRMInterchangeEditor.VRMInterchangeSettings]
 bGenerateSpringBoneData=True
